correct alignment

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -31,6 +31,7 @@ header p {
 /*only needed for grading purposes*/
 nav {
     display: flex;
+    justify-content: center;
 }
 
 ul {
@@ -86,6 +87,7 @@ main {
     grid-template-columns: repeat(auto-fit, minmax(400px, 1rem));
     gap: 1rem;
     place-items: center;
+    justify-content: center;
     padding: 1rem;
 }
 
